修改家校圈协议、验证码、注册界面

--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -27,7 +27,7 @@
 					<input type="password" id="password0" placeholder="输入新密码">
 				</div>
 				<div class="mui-input-row">
-					<label>新密码</label>
+					<label>确认密码</label>
 					<input type="password" id="password1" placeholder="重新输入新密码">
 				</div>
 				<div class="mui-input-row" id="unickName0">
@@ -79,6 +79,7 @@
 				password0.value = '';
 				var password1 = document.getElementById("password1"); //昵称
 				password1.value = '';
+				var modifypasswordBtn = document.getElementById("modifypassword"); //昵称
 
 				//设置里面修改密码
 				window.addEventListener('changePasswords', function() {
@@ -88,6 +89,8 @@
 					back.style.display = 'inline-block';
 					unickName0.style.display = 'none';
 					tempFlag = 1;
+					navTitle.innerHTML = '修改密码';
+					modifypasswordBtn.innerHTML = '修改密码';
 				});
 				//设置里面退出时设置密码
 				window.addEventListener('settingPW', function() {
@@ -97,6 +100,7 @@
 					unickName.style.display = 'block';
 					oldPassword.style.display = 'none';
 					document.getElementById('cancelBtn').style.display = 'none';
+					modifypasswordBtn.innerHTML = '设置密码';
 					console.log('333333');
 				});
 				
@@ -108,6 +112,7 @@
 					unickName.style.display = 'block';
 					oldPassword.style.display = 'none';
 					document.getElementById('cancelBtn').style.display = 'none';
+					modifypasswordBtn.innerHTML = '设置密码';
 					console.log('22222');
 				});
 				//上级传值如果是1，是修改密码
