增加点到记事，笔记字数限制，修改查询班级历史参数

--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
@@ -155,12 +155,12 @@
 								</div>
 							</div>
 							<div class="mui-input-row" style="margin: 0px 5px;" style="">
-								<textarea id="textarea_call" rows="4" placeholder="点到："></textarea>
+								<textarea id="textarea_call" maxlength="500" rows="4" placeholder="点到："></textarea>
 							</div>
 						</div>
 						<div id="record" style="display: none;">
 							<div class="mui-input-row" style="margin: 0px 5px;">
-								<textarea id="textarea_record" rows="4" placeholder="记事："></textarea>
+								<textarea id="textarea_record" maxlength="500" rows="4" placeholder="记事："></textarea>
 							</div>
 						</div>
 					</div>
