--- a/JiaoBaoYun-hb/html/homework/publish-answer.html
+++ b/JiaoBaoYun-hb/html/homework/publish-answer.html
@@ -24,11 +24,11 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title">上传答案||作业</h1>
 			<a id="checkResult" class="mui-icon iconfont icon-jixiaofenshuchaxun mui-pull-right display-none"></a>
-			<a id="post-imgs" class="mui-pull-right">上传</a>
+			<a id="post-imgs" class="mui-icon mui-pull-right post-icon">上传</a>
 			<!--<a id="getAnswer" class="mui-icon iconfont icon-xiangji mui-pull-right"></a>-->
 		</header>
 		<div class="mui-content">
-			
+
 			<div class="receive-container">
 				<div class="mui-input-row display-none teachers-container">
 					<label>接收人:</label>
@@ -43,18 +43,13 @@
 
 					</select>
 				</div>
-				<!--<button id='post-imgs' class="mui-btn mui-btn-blue btn-publish ">上传作业</button>-->
 			</div>
 			<!--表单-->
-			
-
-				<!--<p id="hint-info" style="text-align: center; ">请上传答案图片，以供学生参考</p>-->
-				<div id="pictures" class="img-container temWork-teaHint"></div>
+			<div id="pictures" class="img-container temWork-teaHint"></div>
 			<div class="pAnswer-picContainer">
-				<img id="getAnswer" src="../../image/homework/xiangji.png" class="pAnswer-pic"/>
+				<img id="getAnswer" src="../../image/homework/xiangji.png" class="pAnswer-pic" />
 			</div>
-			
-			
+
 		</div>
 		<script src="../../js/mui.min.js "></script>
 		<!--公共事件-->
@@ -68,10 +63,10 @@
 		<script src="../../js/mui.zoom.js "></script>
 		<!--图片预览-->
 		<script src="../../js/mui.previewimage.js "></script>
-		<script src='../../js/utils/events.js'></script>
+		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js "></script>
-		<script src="../../js/publicHomeworkProtocol.js "></script>
-		<script src="../../js/homework/publish-answer.js "></script>
+		<script src="../../js/publicHomeworkProtocol.js"></script>
+		<script src="../../js/homework/publish-answer.js"></script>
 	</body>
 
 </html>
