--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -34,6 +34,15 @@
 							</div>
 						</a>
 					</li>
+					<li class="mui-table-view-cell mui-media open-newPage" pos='10'>
+						<a href="javascript:;">
+							<p class="mui-pull-right" id='uname'>暂无</p>
+							<div class="mui-media-body">
+								用户名
+
+							</div>
+						</a>
+					</li>
 					<li class="mui-table-view-cell open-newPage" pos='0'>
 						<a href="javascript:;">
 							<p class="mui-pull-right single-line" id='nick'>暂无</p>
