--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -13,15 +13,14 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 id="title" class="mui-title">标题</h1>
-		    <a id="save" class= "mui-pull-right">保存</a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 id="title" class="mui-title">标题</h1>
+			<a id="save" class="mui-pull-right">保存</a>
 		</header>
 		<div class="mui-content">
 			<input id="input-content" type="text" maxlength="10" class="mui-input-clear" placeholder="带清除按钮的输入框">
 		</div>
-		
-		
+
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/storageKeyName.js"></script>
 		<script src="../../js/libs/myStorage/myStorage.js"></script>
@@ -29,89 +28,102 @@
 		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
 			mui.init()
-			mui.plusReady(function(){
-				var pInfo=myStorage.getItem(storageKeyName.PERSONALINFO);
-				var curPage=plus.webview.currentWebview();
-				var title=document.getElementById('title');
-				var btn_save=document.getElementById('save');
-				var inText=document.getElementById('input-content')
-				setContents(curPage.data,title,inText,pInfo)
-				var save=document.getElementById('save');
-				save.addEventListener('tap',function(){
+			mui.plusReady(function() {
+				var pInfo = myStorage.getItem(storageKeyName.PERSONALINFO);
+				var curPage = plus.webview.currentWebview();
+				var title = document.getElementById('title');
+				var btn_save = document.getElementById('save');
+				var inText = document.getElementById('input-content')
+				setContents(curPage.data, title, inText, pInfo)
+				var save = document.getElementById('save');
+				save.addEventListener('tap', function() {
 					console.log('save is clicked');
-					postInfo(curPage.data,inText,pInfo,curPage);
+					postInfo(curPage.data, inText, pInfo, curPage);
 				})
 			})
-			var postInfo=function(no,inText,pInfo,curpage){
-				var vtpKey='';
-				switch (no){
+			var postInfo = function(no, inText, pInfo, curpage) {
+				var vtpKey = '';
+				switch(no) {
 					case 0:
-					vtpKey='unick'
+						vtpKey = 'unick';
 						break;
 					case 1:
-						vtpKey='uemail'
-					break;
+						vtpKey = 'uemail';
+						break;
 					case 2:
-						vtpKey='utxt'
-					break;
+						vtpKey = 'utxt';
+						break;
+					case 10:
+						vtpKey = 'uname';
 					default:
 						break;
 				}
 				console.log(vtpKey)
-				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);		
-				postDataPro_PostReUinf({vtp:vtpKey,vvl:inText.value},wd,function(data){
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				postDataPro_PostReUinf({
+					vtp: vtpKey,
+					vvl: inText.value
+				}, wd, function(data) {
 					wd.close()
 					console.log(JSON.stringify(data))
-					if(data.RspCode=='0000'){
-						pInfo[vtpKey]=inText.value;
-						window.myStorage.setItem(storageKeyName.PERSONALINFO,pInfo)
-						console.log('更改后信息:'+JSON.stringify(pInfo));
-						mui.fire(curpage.opener(),'infoChanged');
-						events.fireToPageNone('mine.html','infoChanged');
-//						events.fireToPageNone('../index/index.html','infoChanged');
-						events.fireToPageNone('classSpace-sub.html','infoChanged');
+					if(data.RspCode == '0000') {
+						pInfo[vtpKey] = inText.value;
+						window.myStorage.setItem(storageKeyName.PERSONALINFO, pInfo)
+						console.log('更改后信息:' + JSON.stringify(pInfo));
+						mui.fire(curpage.opener(), 'infoChanged');
+						events.fireToPageNone('mine.html', 'infoChanged');
+						//						events.fireToPageNone('../index/index.html','infoChanged');
+						events.fireToPageNone('classSpace-sub.html', 'infoChanged');
 						events.fireToPageNone('../quan/tab-zone.html', 'infoChanged');
 						mui.back()
-					}else{
+					} else {
 						mui.toast(data.RspTxt);
 					}
 				})
 			}
-			var setContents=function(no,title,inText,pInfo){
+			var setContents = function(no, title, inText, pInfo) {
 				console.log(no)
-				switch(no){
+				switch(no) {
 					case 0:
-						jQuery('#input-content').prop("maxLength","20");
-						if(pInfo.unick){
-							title.innerText='更改昵称'
-							inText.value=pInfo.unick;
-						}else{
-							title.innerText='填写昵称'
+						jQuery('#input-content').prop("maxLength", "20");
+						if(pInfo.unick) {
+							title.innerText = '更改昵称'
+							inText.value = pInfo.unick;
+						} else {
+							title.innerText = '填写昵称'
 						}
-						inText.placeholder='请输入昵称,最多20字'
-					break;
+						inText.placeholder = '请输入昵称,最多20字'
+						break;
 					case 1:
-					inText.style.maxlength=100;
-						jQuery('#input-content').prop("maxLength","100");
-						if(pInfo.uemail){
-							title.innerText='更改电子邮箱';
-							inText.value=pInfo.uemail;
-						}else{
-							title.innerText='填写电子邮箱'
+						inText.style.maxlength = 100;
+						jQuery('#input-content').prop("maxLength", "100");
+						if(pInfo.uemail) {
+							title.innerText = '更改电子邮箱';
+							inText.value = pInfo.uemail;
+						} else {
+							title.innerText = '填写电子邮箱'
 						}
-						inText.placeholder='请输入电子邮箱地址'
-					break;
+						inText.placeholder = '请输入电子邮箱地址'
+						break;
 					case 2:
-						jQuery('#input-content').prop("maxLength","30");
-						if(pInfo.utxt){
-							title.innerText='更改签名';
-							inText.value=pInfo.utxt;
-						}else{
-							title.innerText='填写签名'
+						jQuery('#input-content').prop("maxLength", "30");
+						if(pInfo.utxt) {
+							title.innerText = '更改签名';
+							inText.value = pInfo.utxt;
+						} else {
+							title.innerText = '填写签名'
 						}
-						inText.placeholder='请输入签名,最多30字'
-					break;
-					default:break;
+						inText.placeholder = '请输入签名,最多30字'
+						break;
+					case 10:
+						jQuery('#input-content').prop("maxLength", "20");
+						if(!pInfo.uname) {
+							title.innerText = '填写用户名';
+						}
+						inText.placeholder = '请填写用户名，只能填写一次，最多20字'
+						break;
+					default:
+						break;
 				}
 			}
 		</script>
