--- a/JiaoBaoYun-hb/html/mine/qun_data.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data.html
@@ -148,7 +148,7 @@
 		<body>
 			<header class="mui-bar mui-bar-nav">
 				<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-				<h1 class="mui-title" style="text-align: left;">群资料</h1>
+				<h1 class="mui-title">人员资料</h1>
 			</header>
 			<div class="mui-content">
 				<span id="noqun" class="mui-icon mui-icon-plus addqun" style="display: none;">新增群按钮</span>
