--- a/JiaoBaoYun-hb/html/mine/qun_manage.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage.html
@@ -152,7 +152,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">群</h1>
+			<h1 class="mui-title">群管理</h1>
 			<a id="invite" class="mui-icon mui-pull-right" style="display: none;">
 				<font style="font-size: 17px;">邀请</font>
 			</a>
