--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -14,6 +14,11 @@
 			.mui-pull-right{
 				max-width: 70%;
 			}
+			.head-portrait{
+				width: 4rem;
+				height: 4rem;
+				border-radius: 50%;
+			}
 		</style>
 	</head>
 
@@ -28,7 +33,7 @@
 				<ul class="mui-table-view">
 					<li class="mui-table-view-cell">
 						<a href="#picture">
-							<img class="mui-media-object mui-pull-right" id="img" src="../../image/utils/default_personalimage.png">
+							<img class="mui-media-object mui-pull-right head-portrait" id="img" src="../../image/utils/default_personalimage.png">
 							<div class="mui-pull-left ">
 								头像
 							</div>
