--- a/JiaoBaoYun-hb/html/cloud/storage_main_choose.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main_choose.html
@@ -59,7 +59,7 @@
 			.icon-trash {
 				/*background: red;*/
 				text-align: center;
-				min-width: 40px;
+				/*min-width: 40px;*/
 			}
 
 			#top {
@@ -409,7 +409,7 @@
 						html1 = '<span class="mui-navigate-right mui-media-object mui-pull-right"></span>';
 						html2 = '<img class="mui-media-object mui-pull-left" src="../../image/cloud/A_folder.png">';
 						html3 = '<div class="mui-media-body">\
-									<div id="fname_' + data.fid + '" class="mui-ellipsis">' + data.fname + '</div>\
+									<div id="fname_' + data.fid + '" class="mui-ellipsis-2">' + data.fname + '</div>\
 								</div>';
 					}
 					li.innerHTML = html1 + html2 + html3;
