设置密码界面修改

--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -112,7 +112,7 @@
 					unickName.style.display = 'block';
 					oldPassword.style.display = 'none';
 					document.getElementById('cancelBtn').style.display = 'none';
-					modifypasswordBtn.innerHTML = '设置密码';
+					modifypasswordBtn.innerHTML = '完成';
 					console.log('22222');
 				});
 				//上级传值如果是1，是修改密码
@@ -157,6 +157,7 @@
 					}
 					if(newpw0 != newpw1) {
 						mui.toast('两次输入的密码不一致');
+						return;
 					}
 
 					//握手协议
@@ -241,14 +242,14 @@
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.ispw = '1';
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
-										mui.toast('修改密码成功');
+//										mui.toast('修改密码成功');
 										events.infoChanged();
 										events.openNewWindowWithData('../index/index.html', '');
 									} else if(tempFlag == 1) {//在设置里，修改密码
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.ispw = '1';
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
-										mui.toast('修改密码成功');
+//										mui.toast('修改密码成功');
 									} else if(tempFlag == 3) {//在设置里，退出时设置密码
 										//修改自动登录值
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, null);
