调整笔记上拉加载，调整云盘首页，修改昵称后修改云盘首页，增加默认个人头像到七牛

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -30,10 +30,10 @@
 			.cloud-info {
 				position: absolute;
 				/*顶部信息*/
-				left: 0;
+				/*left: 0;*/
 				top: 2%;
-				float: left;
-				text-align: left;
+				/*float: left;*/
+				/*text-align: left;*/
 				margin-left: 55%;
 			}
 
@@ -74,7 +74,7 @@
 				margin-top: 5px;
 				margin-bottom: 5px;
 				height: 10px;
-				width: 70%;
+				width: 30%;
 			}
 
 			.cloud-capacity {
@@ -181,10 +181,11 @@
 					<!--顶部-->
 					<div class="cloud-top" style="min-height: 100px;width:100%;">
 						<img id="imge_bg" src="../../image/cloud/cloud_bg2.png" style="width: 100%;position: absolute;" />
-						<div class="cloud-info" style="">
-							<p id="cloud_name" class="common-font-family-Bold mui-ellipsis" style="float: left;width: 40%;">
-								<!--一二三四五六七八九十一二三四五六七八九十-->
-							</p>
+						<div class="cloud-info" style="width: 100%;">
+							<div style="width: 45%;">
+								<div id="cloud_name" class="common-font-family-Bold mui-ellipsis" style="float: left;width: 100%;">
+								</div>
+							</div>
 							<br />
 							<div class="mui-progressbar mui-progressbar-in" style="float: left;">
 								<span></span>
@@ -195,7 +196,7 @@
 							</div>
 							<br />
 							<div class="cloud-capacity" style="float: left;">
-								已用800G&nbsp;&nbsp;&nbsp;剩余:200G
+								已用800G 剩余:200G
 							</div>
 						</div>
 					</div>
