--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -75,7 +75,10 @@
 						//						events.fireToPageNone('../index/index.html','infoChanged');
 						events.fireToPageNone('classSpace-sub.html', 'infoChanged');
 						events.fireToPageNone('../quan/tab-zone.html', 'infoChanged');
-						mui.back()
+						if(no == 0) {
+							events.fireToPageNone('../cloud/cloud_home.html', 'personChanged');
+						}
+						mui.back();
 					} else {
 						mui.toast(data.RspTxt);
 					}
