--- a/JiaoBaoYun-hb/html/cloud/app_notes_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_sub.html
@@ -120,13 +120,6 @@
 				 */
 				function pulldownRefresh() {
 					setTimeout(function() {
-						//					mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
-						//					var table = document.getElementById("recordfile");
-						//					table.innerHTML = '';
-						//					for(var i = 0; i < 5; i++) {
-						//						addRecordFile();
-						//					}
-
 						//刷新时将页码归1
 						totalCnt = 0;
 						flag = 1;
@@ -139,8 +132,6 @@
 						};
 						//请求数据
 						requestData(comData);
-						mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
-						mui('#pullrefresh').pullRefresh().enablePullupToRefresh();
 					}, 1500);
 				}
 
@@ -149,16 +140,10 @@
 				 */
 				function pullupRefresh() {
 					setTimeout(function() {
-						//					mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
-						//					for(var i = 0; i < 5; i++) {
-						//						addRecordFile();
-						//					}
-
 						flag = 2;
-						mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
 						if(tempPage * 10 > totalCnt || tempPage * 10 == totalCnt) {
 							mui.toast('没有更多了...');
-							mui('#pullrefresh').pullRefresh().endPullupToRefresh(true);
+							mui('#pullrefresh').pullRefresh().endPullupToRefresh(true); //参数为true代表没有更多数据了。
 						} else {
 							tempPage++;
 							var comData = {
@@ -232,9 +217,14 @@
 								recordArray = tempRspData;
 								table.innerHTML='';//情况界面的列表
 								lastDate = '';
+								mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //下拉刷新结束
+								mui('#pullrefresh').pullRefresh().refresh(true);//重置上拉加载
 							} else {
 								//合并数组
 								recordArray = recordArray.concat(tempRspData);
+							}
+							if(flag ==2){
+								mui('#pullrefresh').pullRefresh().endPullupToRefresh();//结束上拉加载
 							}
 
 							mui.each(tempRspData, function(index, item) {
@@ -244,12 +234,19 @@
 
 							//档案总条数
 							totalCnt = data.RspData.TotalCnt;
-							mui.each(tempRspData, function(index, item) {
-								console.log('tempRspData:' + JSON.stringify(item));
-
-							});
-							if(recordArray.length==0&&tempRspData.length==0){
+							//为空
+							if(recordArray.length==0 && tempRspData.length==0){
 								mui.toast('笔记为空');
+								mui('#pullrefresh').pullRefresh().disablePullupToRefresh();//禁用上拉刷新
+							}
+							//获取得到的数据小于10条说明没有下一页
+							if(tempRspData.length < 10 && recordArray.length > 10){
+								console.log(tempRspData.length+'|'+recordArray.length);
+								mui('#pullrefresh').pullRefresh().endPullupToRefresh(true); //参数为true代表没有更多数据了。
+							}else if(tempRspData.length < 10 && recordArray.length < 10){
+								mui('#pullrefresh').pullRefresh().disablePullupToRefresh();//禁用上拉刷新
+							}else{
+								mui('#pullrefresh').pullRefresh().enablePullupToRefresh();//启用上拉刷新
 							}
 						} else {
 							mui.toast(data.RspTxt);
