--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -47,14 +47,14 @@
 						<span id="img" class=" iconfont subject-icon" style="margin-left: -10px;display: none;" hidden="hidden"></span>
 						<!--</img>-->
 						<div class="mui-media-body">
-							<h4 id="homeworkTitle"></h4>
-							<p id="publishDate" class='mui-ellipsis'></p>
+							<h5 id="homeworkTitle" style="color: #404040;"></h5>
+							<p id="publishDate" class='mui-ellipsis' style="color: #747474;"></p>
 						</div>
 						<div style="margin-top: 10px;">
 						<hr id="hr"  style="height:1px;border:none;border-top:1px solid #ededed;" />
 					</div>
 						<div class="mui-media-body">
-							<font id="homeWorkContent"></font>
+							<font id="homeWorkContent" style="color: #747474;"></font>
 						</div>
 					</li>
 					<li id="stuHomework" class="mui-table-view-divider divider-color">学生答案</li>
