--- a/JiaoBaoYun-hb/html/quan/pub-leave.html
+++ b/JiaoBaoYun-hb/html/quan/pub-leave.html
@@ -13,6 +13,14 @@
 		<!--公用事件js文件-->
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<style type="text/css">
+			.input-content{
+	position: absolute;
+	top: 45px;
+	width: 100%;
+	height: 25rem;
+}
+		</style>
 
 	</head>
 
@@ -22,9 +30,8 @@
 			<h1 class="mui-title common-color-white common-font-family-Regular">写留言</h1>
 			<a id="publish" class="mui-pull-right mui-plus-visible">发表</a>
 		</header>
-		<div class="mui-content mo-background-color">
-			<div class="mui-input-row">
-				<p></p>
+		<div class="mui-content">
+			<div style="margin: 10px;">
 				<textarea id='content' class="mui-input-clear question" placeholder="留言" style="height: 200px;"></textarea>
 			</div>
 		</div>
