--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -27,6 +27,12 @@
 	color:#808080 ;
 	background-color: white;
 }
+			.dynamic-personal-image {
+				/*个人头像圆形*/
+				border-radius: 50%;
+				width: 50px;
+				height: 50px;
+			}
 		</style>
 		
 	</head>
@@ -42,9 +48,9 @@
 			<div class="mui-scroll">
 				<ul id="list" class="mui-table-view">
 					<li class="mui-table-view-cell mui-media">
-						<img id="headImg" style="display: none;margin-top: 5px;" class="mui-media-object mui-pull-left" / >
+						<img id="headImg" style="display: none;margin-top: 5px;" class="mui-media-object mui-pull-left dynamic-personal-image" / >
 						<!--<img id="headImg">-->
-						<span id="img" class=" iconfont subject-icon" style="margin-left: -10px;display: none;" hidden="hidden"></span>
+						<span id="img" class=" iconfont subject-icon dynamic-personal-image" style="margin-left: -10px;display: none;" hidden="hidden"></span>
 						<!--</img>-->
 						<div class="mui-media-body">
 							<h5 id="homeworkTitle" style="color: #404040;"></h5>
